feat: GET /threshold OAS 定義追加
